--- a/templates/menubar.html
+++ b/templates/menubar.html
@@ -24,7 +24,7 @@
     <li class="nav-item dropdown">
       <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">Oracle</a>
       <div class="dropdown-menu">
-        <a class="dropdown-item" href="#">Recompiler</a>
+        <a class="dropdown-item" href="recompiler">Invalid objects</a>
         <a class="dropdown-item" href="#">Looks</a>
         <a class="dropdown-item" href="#">Sessions</a>
 		<a class="dropdown-item" href="#">Top Sessions</a>
