--- a/templates/info.html
+++ b/templates/info.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-	<title>MGrep - Home page</title>
+	<title>MGrep - Info</title>
 	<meta charset="utf-8">
 	<!-- Bootstrap4 -->
 	<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -21,72 +21,80 @@
 <body>
 
 <!-- Importo tramite Flask html contenente i menu e tutta l'intestazione -->
-<div class="mgrep_menubar">
+<div>
   {% include 'menubar.html' %}
 </div>
 
-<!-- Barra testata di pagina -->
-<div class="header-portfolio clearfix">
- <h2 class="pull-left">Info</h2>
-</ul>
-</div><!-- /header-portfolio -->
-
 <!-- Contenuti (griglia) -->
-<div class="container">
+<div class="container">	
+	<!-- Questa div contiene lo spazio dove viene visualizzato un messaggio flash, di conferma, quando l'utente clicca sul button send-->
+	<div class="row justify-content-center">
+		{% for message in get_flashed_messages() %}		 
+		<div class="alert alert-success alert-dismissible fade show">
+			<strong>Success!</strong> {{ message }}
+			<button type="button" class="close" data-dismiss="alert">&times;</button>    
+		</div>
+		{% endfor %}
+		{% block content %} {% endblock %}
+	</div>
 
-<div class="row">
- <!-- Info di programma -->
- <div class="col-sm-12">
- <section id="info-programma" class="margine-bottom">
-  <h3 class="contatti-titoli">Program info</h3>
-  <p> This program was created by Marco Valaguzza. It's made by using Python 3.6, Flask 1.1.2 and Bootstrap 3.</p>
- </section>
-</div> 
-
-<div class="row">
- </div><!-- /Info di programma -->
- <div class="col-sm-6 col-sm-push-6">
- <section id="info-contatto" class="margine-bottom">
-  <h3 class="contatti-titoli">Where i am</h3>
-  <img class="thumbnail img-responsive" src="static/img/mappa.png">  
- </section>
- </div><!-- /col-sm-6 -->
- <div class="col-sm-6 col-sm-pull-6">
- <section id="modulo-di-contatto" class="margine-bottom">
-  <h3 class="contatti-titoli">Do you have some questions? Contact me!</h3>
-  <form id="contatti-form" class="form-horizontal">
-  <div class="form-group">
-   <label for="inputNome" class="col-sm-3 control-label">Name</label>
-   <div class="col-sm-9">
-    <input class="form-control" type="text" id="inputNome" name="inputNome"  class="input-with-feedback">
-   </div>
-  </div>
-  <div class="form-group">
-   <label for="inputEmail" class="col-sm-3 control-label">Email</label>
-   <div class="col-sm-9">
-    <input class="form-control" type="text" id="inputEmail" name="inputEmail"  class="input-with-feedback">
-   </div>
-  </div>
-  <div class="form-group">
-   <label for="textMessaggio" class="col-sm-3 control-label">Message</label>
-   <div class="col-sm-9">
-    <textarea class="form-control" id="textMessaggio" name="textMessaggio" rows="6" placeholder="Type here your message..."   class="input-with-feedback"></textarea>
-   </div>
-  </div>
-  <div class="form-group">
-   <div class="col-sm-9 col-sm-offset-3">
-    <button type="submit" class="btn btn-success btn-block">Send</button>
-   </div>
-  </div>
-  </form>
- </section>
- 
- </div><!-- /col-lg-6 -->
-</div><!-- /row -->
-</div><!-- /.container -->
+	<!-- Riga info-->
+	<div class="row justify-content-center">		
+		<div class="col-6 border">
+			<section id="info-programma" class="margine-bottom">
+				<h3 >Program info</h3>
+				<p> This program was created by Marco Valaguzza.<br>It's made by using Python 3.6, Flask 1.1.2 and Bootstrap 4.</p>
+			</section>
+		</div> 
+	</div> 
+	
+	<!-- Riga where i am-->
+	<div class="row justify-content-center">		
+		<div class="col-6 border">
+			<section id="info-contatto" class="margine-bottom">
+				<h3 >Where i am</h3>
+				<img class="thumbnail img-responsive" src="static/img/mappa.png">  
+			</section>
+		</div> 
+	</div> 
+	
+	<!-- Form di input dei dati-->
+	<div class="row justify-content-center">
+		<div class="col-6 border">
+			<section id="modulo-di-contatto" class="margine-bottom">
+				<h3 >Do you have some questions? Contact me!</h3>
+				<form id="contatti-form" method="post" class="form-horizontal">
+					<div class="form-group row">
+						<label for="inputNome" class="col-sm-3 control-label">Name</label>
+						<div class="col-sm-9">
+							<input class="form-control" type="text" id="inputNome" name="inputNome"  placeholder="Name..." class="input-with-feedback" required value="{{ request.form['inputNome'] }}">
+						</div>
+					</div>
+					<div class="form-group row">
+						<label for="inputEmail" class="col-sm-3 control-label">Email</label>
+							<div class="col-sm-9">
+								<input class="form-control" type="text" id="inputEmail" name="inputEmail"  placeholder="Email..." class="input-with-feedback" required value="{{ request.form['inputEmail'] }}">								
+							</div>
+					</div>
+					<div class="form-group row">
+						<label for="textMessaggio" class="col-sm-3 control-label">Message</label>
+								<div class="col-sm-9">
+									<textarea class="form-control" id="textMessaggio" name="textMessaggio" rows="6" placeholder="Type here your message..."   class="input-with-feedback" required>{{ request.form['textMessaggio'] }}</textarea>									
+								</div>
+					</div>
+					<div class="form-group row">
+						<div class="col">
+							<button type="submit" class="btn btn-success btn-block">Send</button>
+						</div>
+					</div>
+				</form>
+			</section>		 
+		</div>
+	</div>
+</div>
 
 <!-- Importo tramite Flask html contenente il piede della pagina -->
-<div class="mgrep_menubar">
+<div>
   {% include 'footer.html' %}
 </div>
 
