--- a/templates/home.html
+++ b/templates/home.html
@@ -3,19 +3,19 @@
 
 <head>
 	<title>MGrep - Home page</title>
-	<meta charset="utf-8">
-	<!-- Bootstrap4 -->
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<!-- Latest compiled and minified CSS -->
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-	<!-- jQuery library -->
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-	<!-- Popper JS -->
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
-	<!-- Latest compiled JavaScript -->
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script> 
-	<!-- Icona del browser-->
-	<link rel="icon" href="/static/img/icon_browser.png" type="image/x-icon">
+	<!-- Importo tramite Flask html contenente i riferimenti alle librerie bootstrap -->
+	{% include 'bootstrap.html' %}
+	<!-- Stile personalizzati per il carosello-->
+	<style>
+		.carousel{
+			background: white;
+			margin-top: 20px;
+		}
+		.carousel-item{
+			text-align: center;
+			min-height: 280px; /* Prevent carousel from being distorted if for some reason image doesn't load */
+		}
+	</style>		
 </head>
 
 <body>
@@ -25,37 +25,29 @@
   {% include 'menubar.html' %}
 </div>
 
-<!-- Carosello immagini -->
-<div class="container">
-	<div class="row">
-		<div class="col-sm-12">
-			<div id="demo" class="carousel slide" data-ride="carousel">
-			  <!-- Indicators -->
-			  <ul class="carousel-indicators">
-				<li data-target="#demo" data-slide-to="0" class="active"></li>
-				<li data-target="#demo" data-slide-to="1"></li>  
-			  </ul>
-
-			  <!-- The slideshow -->
-			  <div class="carousel-inner">
-				<div class="carousel-item active">
-				  <img src="static/img/carosello1.jpg">
-				</div>
-				<div class="carousel-item">
-				  <img src="static/img/carosello2.jpg">
-				</div>    
-			  </div>
-
-			  <!-- Left and right controls -->
-			  <a class="carousel-control-prev" href="#demo" data-slide="prev">
-				<span class="carousel-control-prev-icon"></span>
-			  </a>
-			  <a class="carousel-control-next" href="#demo" data-slide="next">
-				<span class="carousel-control-next-icon"></span>
-			  </a>
-			</div>
-		</div><!-- /.col-sm-12 -->
-	</div><!-- /.row -->
+<!--Carosello immagini-->
+<div id="myCarousel" class="carousel slide" data-ride="carousel">
+    <!-- Carousel indicators -->
+    <ol class="carousel-indicators">
+        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+        <li data-target="#myCarousel" data-slide-to="1"></li>
+    </ol>
+    <!-- Wrapper for carousel items -->
+    <div class="carousel-inner">
+        <div class="carousel-item active">
+            <img src="static/img/carosello1.jpg" alt="First Slide">
+        </div>
+        <div class="carousel-item">
+            <img src="static/img/carosello2.jpg" alt="Second Slide">
+        </div>        
+    </div>
+    <!-- Carousel controls -->
+    <a class="carousel-control-prev" href="#myCarousel" data-slide="prev">
+        <span class="carousel-control-prev-icon"></span>
+    </a>
+    <a class="carousel-control-next" href="#myCarousel" data-slide="next">
+        <span class="carousel-control-next-icon"></span>
+    </a>
 </div>
 
 <!-- Messaggio di benvenuto -->
