--- a/templates/info.html
+++ b/templates/info.html
@@ -3,19 +3,8 @@
 
 <head>
 	<title>MGrep - Info</title>
-	<meta charset="utf-8">
-	<!-- Bootstrap4 -->
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<!-- Latest compiled and minified CSS -->
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-	<!-- jQuery library -->
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-	<!-- Popper JS -->
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
-	<!-- Latest compiled JavaScript -->
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script> 
-	<!-- Icona del browser-->
-	<link rel="icon" href="/static/img/icon_browser.png" type="image/x-icon">
+	<!-- Importo tramite Flask html contenente i riferimenti alle librerie bootstrap -->
+	{% include 'bootstrap.html' %}
 </head>
 
 <body>
@@ -43,7 +32,7 @@
 		<div class="col-6 border">
 			<section id="info-programma" class="margine-bottom">
 				<h3 >Program info</h3>
-				<p> This program was created by Marco Valaguzza.<br>It's made by using Python 3.6, Flask 1.1.2 and Bootstrap 4.</p>
+				<p>The MGrep is a set of tools for Oracle developer!<br>It's made by using Python 3.6, Flask 1.1.2 and Bootstrap 4.</p>
 			</section>
 		</div> 
 	</div> 
@@ -52,8 +41,8 @@
 	<div class="row justify-content-center">		
 		<div class="col-6 border">
 			<section id="info-contatto" class="margine-bottom">
-				<h3 >Where i am</h3>
-				<img class="thumbnail img-responsive" src="static/img/mappa.png">  
+				<h3>Who i am?</h3>
+				<img class="img-fluid" src="static/img/who_i_am.jpg">  
 			</section>
 		</div> 
 	</div> 
@@ -62,7 +51,7 @@
 	<div class="row justify-content-center">
 		<div class="col-6 border">
 			<section id="modulo-di-contatto" class="margine-bottom">
-				<h3 >Do you have some questions? Contact me!</h3>
+				<h3>Do you have some questions? Contact me!</h3>
 				<form id="contatti-form" method="post" class="form-horizontal">
 					<div class="form-group row">
 						<label for="inputNome" class="col-sm-3 control-label">Name</label>
