--- a/templates/menubar.html
+++ b/templates/menubar.html
@@ -25,7 +25,8 @@
       <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">Oracle</a>
       <div class="dropdown-menu">
         <a class="dropdown-item" href="recompiler">Invalid objects</a>
-        <a class="dropdown-item" href="#">Looks</a>
+        <a class="dropdown-item" href="sessions_locks">Sessions Locks</a>
+        <a class="dropdown-item" href="#">Table Locks</a>
         <a class="dropdown-item" href="#">Sessions</a>
 		<a class="dropdown-item" href="#">Top Sessions</a>
 		<a class="dropdown-item" href="#">Job status</a>
