--- a/templates/info.html
+++ b/templates/info.html
@@ -30,9 +30,14 @@
 	<!-- Riga info-->
 	<div class="row justify-content-center">		
 		<div class="col-6 border">
-			<section id="info-programma" class="margine-bottom">
+			<section id="info-programma">
 				<h3 >Program info</h3>
-				<p>The MGrep is a set of tools for Oracle developer!<br>It's made by using Python 3.6, Flask 1.1.2 and Bootstrap 4.</p>
+				<p>The MGrep is a set of tools for Oracle developer!<br>
+				It's made by using:<br>
+				- Python 3.6<br>
+				- Flask 1.1.2<br>
+				- Bootstrap 4.
+			</p>
 			</section>
 		</div> 
 	</div> 
@@ -40,7 +45,7 @@
 	<!-- Riga where i am-->
 	<div class="row justify-content-center">		
 		<div class="col-6 border">
-			<section id="info-contatto" class="margine-bottom">
+			<section id="info-contatto">
 				<h3>Who i am?</h3>
 				<img class="img-fluid" src="static/img/who_i_am.jpg">  
 			</section>
@@ -50,7 +55,7 @@
 	<!-- Form di input dei dati-->
 	<div class="row justify-content-center">
 		<div class="col-6 border">
-			<section id="modulo-di-contatto" class="margine-bottom">
+			<section id="modulo-di-contatto">
 				<h3>Do you have some questions? Contact me!</h3>
 				<form id="contatti-form" method="post" class="form-horizontal">
 					<div class="form-group row">
