--- a/templates/menubar.html
+++ b/templates/menubar.html
@@ -26,8 +26,8 @@
       <div class="dropdown-menu">
         <a class="dropdown-item" href="recompiler">Invalid objects</a>
         <a class="dropdown-item" href="sessions_locks">Sessions Locks</a>
-        <a class="dropdown-item" href="#">Table Locks</a>
-        <a class="dropdown-item" href="#">Sessions</a>
+        <a class="dropdown-item" href="table_locks">Table Locks</a>
+        <a class="dropdown-item" href="sessions_list">Sessions</a>
 		<a class="dropdown-item" href="#">Top Sessions</a>
 		<a class="dropdown-item" href="#">Job status</a>
 		<a class="dropdown-item" href="#">Table space</a>
