--- a/templates/table_locks.html
+++ b/templates/table_locks.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-	<title>MGrep - Recompiler</title>
+	<title>MGrep - Sessions locked by a table</title>
 	<!-- Importo tramite Flask html contenente i riferimenti alle librerie bootstrap -->
 	{% include 'bootstrap.html' %}
 </head>
@@ -18,7 +18,7 @@
 <div class="container">    
 	<div class="row">
 		<div class="col text-center">
-			<h3>Invalid objects in Oracle server</h3>
+			<h3>List of sessions locked by a table in Oracle server</h3>
 		</div>
 	</div>
 </div>	
@@ -39,7 +39,7 @@
 	<div class="row justify-content-center">
 		<div class="col-6">					    			
 			<form method="post" class="form-horizontal">
-				 <div class="form-group row">
+				<div class="form-group row">
 					<!-- Label nome server (viene assegnata una classe boostrap)-->
 					{{ python_form.e_server_name.label(class_="col-sm-4 control-label") }}					
 					<!-- Lista di valori per nome server (viene assegnata una classe boostrap)-->
@@ -48,14 +48,20 @@
 					</div>
 				</div> 						
 				<div class="form-group row">
-					<!-- Pulsante di ricerca oggetti invalidi (viene assegnata una classe boostrap)-->
-					<div class="col">
-						{{ python_form.b_oggetti_invalidi(class_="btn btn-secondary btn-block") }}
+					<!-- Label nome tabella (viene assegnata una classe boostrap)-->
+					{{ python_form.e_table_name.label(class_="col-sm-4 control-label") }}					
+					<!-- Lista di valori per nomi tabelle (viene assegnata una classe boostrap)-->
+					<div class="col-sm-4">
+						{{ python_form.e_table_name(class_="form-control") }}					
 					</div>
-					<!-- Pulsante di compilazione oggetti invalidi (viene assegnata una classe boostrap)-->
+					<!--Pulsante per il caricamento della lista tabelle (non è stato creato con wtforms perché non sono riuscito a creare pulsante submit con icona)-->					
+					<button type="submit" class="btn btn-primary btn-sm" name="b_carica_nomi_tabelle" value="click_b_carica_nomi_tabelle"><i class="fa fa-sync"></i></button>
+				</div> 						
+				<div class="form-group row">
+					<!-- Pulsante di avvio ricerca dei locks (viene assegnata una classe boostrap)-->
 					<div class="col">
-						{{ python_form.b_compila_tutto(class_="btn btn-primary btn-block") }}
-					</div>
+						{{ python_form.b_ricerca_blocchi(class_="btn btn-primary btn-block") }}
+					</div>					
 				</div>
 			</form>			
 		</div>
