--- a/templates/books.html
+++ b/templates/books.html
@@ -8,6 +8,8 @@
 	<!-- Includo la libreria per ordinare le colonne di tabella tramite la classe "sortable" -->
 	<script src="https://www.kryogenix.org/code/browser/sorttable/sorttable.js"></script>
 	<style> table.sortable th:not(.sorttable_sorted):not(.sorttable_sorted_reverse):not(.sorttable_nosort):after { content: " \25B4\25BE" } </style>
+	<!-- Includo la libreria per esportare i dati in excel e csv-->
+	<script src="/static/plugin/excellentexport-1.4/excellentexport.js"></script>
 </head>
 
 <body>
@@ -38,8 +40,23 @@
 					<div class="col">
 						<input class="form-control form-control-lg form-control-borderless" type="search" id="id_ricerca" placeholder="Type here for search">
 					</div>					
+					<!-- Pulsanti per l'export dei dati (v. id_my_table_book che è il nome della tabella creata lato Python)-->
+					<div class="btn-group">
+						<button type="button" class="btn btn-secondary"><i class="fa fa-download"></i></button>
+						<button type="button" class="btn btn-secondary dropdown-toggle dropdown-toggle-split" data-toggle="dropdown">
+						<span class="caret"></span>
+						</button>
+						<div class="dropdown-menu">
+							<div class="dropdown-item" href="#">
+								<a download="Phone_book.xls" href="#" onclick="return ExcellentExport.excel(this, 'id_my_table_book', 'Phone book');">Export to Excel</a>
+							</div>
+							<div class="dropdown-item" href="#">
+								<a download="Phone_book.csv" href="#" onclick="return ExcellentExport.csv(this, 'id_my_table_book');">Export to CSV</a>
+							</div>
+						</div>
+					</div> 
 				</div>
-			</form>
+			</form>			
 		</div>                        
 	</div>
 </div>
