--- a/templates/info.html
+++ b/templates/info.html
@@ -29,14 +29,16 @@
 
 	<!-- Riga info-->
 	<div class="row justify-content-center">		
-		<div class="col-6 border">
+		<div class="col-6">
 			<section id="info-programma">
 				<h3 >Program info</h3>
 				<p>The MGrep is a set of tools for Oracle developer!<br>
 				It's made by using:<br>
-				- Python 3.6<br>
-				- Flask 1.1.2<br>
-				- Bootstrap 4.
+				- Python  3.6	(...the core)<br>
+				- Flask 1.1.2 	(server side framework)<br>
+				- WtForms 2.3	(form fields service)<br>
+				- Bootstrap 4	(graphic interface).<br>
+				- pyfiglet 0.8	(ascii graphics library)
 			</p>
 			</section>
 		</div> 
@@ -44,7 +46,7 @@
 	
 	<!-- Riga where i am-->
 	<div class="row justify-content-center">		
-		<div class="col-6 border">
+		<div class="col-6">
 			<section id="info-contatto">
 				<h3>Who i am?</h3>
 				<img class="img-fluid" src="static/img/who_i_am.jpg">  
@@ -54,7 +56,7 @@
 	
 	<!-- Form di input dei dati-->
 	<div class="row justify-content-center">
-		<div class="col-6 border">
+		<div class="col-6">
 			<section id="modulo-di-contatto">
 				<h3>Do you have some questions? Contact me!</h3>
 				<form id="contatti-form" method="post" class="form-horizontal">
