--- a/templates/menubar.html
+++ b/templates/menubar.html
@@ -1,69 +1,73 @@
-<!-- Header e barra di navigazione -->
+<!-- Header barra di navigazione -->
 <header>
 
- <nav class="navbar navbar-expand-sm bg-light justify-content-center">
-  <!-- Brand -->
-  <a class="navbar-brand" href="/">
-    <img src="/static/img/mgrep_logo.png" alt="Logo" style="width:120px;">
-  </a>  
+<nav class="navbar navbar-expand-md navbar-light bg-light">
+    <!-- Bottone per versione mobile -->
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+    </button>
 
-  <!-- Links -->
-  <ul class="navbar-nav">
+    <!-- Barra menu -->
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">      
+        <ul class="navbar-nav mx-auto">
 
-    <!-- Menu ricerca-->
-    <li class="nav-item dropdown">
-      <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">Search</a>
-      <div class="dropdown-menu">
-        <a class="dropdown-item" href="search_string">Search in source code</a>
-        <a class="dropdown-item" href="#">Files in system</a>
-        <a class="dropdown-item" href="#">Image link in web page</a>
-      </div>
-    </li>
-	
-	<!-- Menu oracle-->
-    <li class="nav-item dropdown">
-      <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">Oracle</a>
-      <div class="dropdown-menu">
-        <a class="dropdown-item" href="recompiler">Invalid objects</a>
-        <a class="dropdown-item" href="sessions_locks">Sessions Locks</a>
-        <a class="dropdown-item" href="table_locks">Table Locks</a>
-        <a class="dropdown-item" href="sessions_list">Sessions</a>
-		<a class="dropdown-item" href="#">Top Sessions</a>
-		<a class="dropdown-item" href="#">Job status</a>
-		<a class="dropdown-item" href="#">Table space</a>
-		<a class="dropdown-item" href="#">Table wasted</a>
-		<a class="dropdown-item" href="#">Servers status</a>
-		<a class="dropdown-item" href="#">Volume</a>
-      </div>
-    </li>
-	
-	<!-- Menu favoriti-->
-    <li class="nav-item dropdown">
-      <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">Favorites</a>
-      <div class="dropdown-menu">
-        <a class="dropdown-item" href="#">Files</a>
-        <a class="dropdown-item" href="#">Directories</a>        
-      </div>
-    </li>
-	
-	<!-- Menu Tools-->
-    <li class="nav-item dropdown">
-      <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">Tools</a>
-      <div class="dropdown-menu">
-        <a class="dropdown-item" href="#">Import-export</a>
-        <a class="dropdown-item" href="#">Ascii Graphics generator</a>        
-		<a class="dropdown-item" href="#">Download an object from iAS12g</a>		
-      </div>
-    </li>
-	
-	<!-- Collegamenti diretti -->
-	<li class="nav-item">
-      <a class="nav-link" href="books">Phone book</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" href="info">Info</a>
-    </li>
-  </ul>
+            <!-- Brand -->
+            <a class="navbar-brand" href="/">
+            <img src="/static/img/mgrep_logo.png" alt="Logo" style="width:100px;">
+            </a>  
+
+            <!-- Link Ricerca -->
+            <li class="nav-item">
+            <a class="nav-link" href="search_string">Search strings</a>
+            </li>
+
+            <!-- Menu oracle-->
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">Oracle</a>
+                <div class="dropdown-menu">
+                    <a class="dropdown-item" href="recompiler">Invalid objects</a>
+                    <a class="dropdown-item" href="sessions_locks">Sessions Locks</a>
+                    <a class="dropdown-item" href="table_locks">Table Locks</a>
+                    <a class="dropdown-item" href="sessions_list">Sessions</a>
+                    <a class="dropdown-item" href="#">Top Sessions</a>
+                    <a class="dropdown-item" href="#">Job status</a>
+                    <a class="dropdown-item" href="#">Table space</a>
+                    <a class="dropdown-item" href="#">Table wasted</a>
+                    <a class="dropdown-item" href="#">Servers status</a>
+                    <a class="dropdown-item" href="#">Volume</a>
+                </div>
+            </li>
+
+            <!-- Menu favoriti-->
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">Favorites</a>
+                <div class="dropdown-menu">
+                    <a class="dropdown-item" href="#">Files</a>
+                    <a class="dropdown-item" href="#">Directories</a>        
+                </div>
+            </li>
+
+            <!-- Menu Tools-->
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">Tools</a>
+                <div class="dropdown-menu">
+                    <a class="dropdown-item" href="#">Import-export</a>
+                    <a class="dropdown-item" href="ascii_graphics">Ascii Graphics generator</a>        
+                    <a class="dropdown-item" href="#">Download an object from iAS12g</a>		
+                </div>
+            </li>
+
+            <!-- Rubrica -->
+            <li class="nav-item">
+            <a class="nav-link" href="books">Phone book</a>
+            </li>
+
+            <!-- Info -->
+            <li class="nav-item">
+            <a class="nav-link" href="info">Info</a>
+            </li>
+        </ul>
+    </div>
 </nav> 
 
 </header><!-- /header -->
